fixed center align homepage buttons and footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,16 @@
 html {
-}
-
-body {
-  background-color: orange;
-  background-image: url('./images/yellownew.jpg');
+  /*background-image: url('./images/yellownew.jpg');*/
+  background-color: rgba(217, 162, 62, 1);
+  /*background-image: url('https://static.pexels.com/photos/160146/pexels-photo-160146.jpeg');*/
+  background-image: url('/images/yellownew.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  /*background-color: rgba(217, 162, 0);*/
   margin: 0 auto;
+}
+
+body {
   font-family: 'Nunito', sans-serif;
 }
 
@@ -79,15 +80,7 @@ h2 {
   font-family: 'Fredericka the Great', cursive;
 }
 
-.bc {
-  position: relative;
-  margin-left: 0;
-  width: 100%;
-  height: 100px;
-}
-
 .homeBtnContainer {
-  position: absolute;
   text-align: center;
   margin: 0 auto;
   width: 1000px;
@@ -206,7 +199,6 @@ input {
   text-align: center;
   background: none;
   font-weight: 700;
-  font-family: 'Lato', georgia;
   font-size: 25px;
   color: rgba(255, 255, 255, 1);
   max-width: 90%;
@@ -341,7 +333,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 30px;
